--- a/AdultGoldStars/AdultGoldStars/AdultGoldStars.csproj
+++ b/AdultGoldStars/AdultGoldStars/AdultGoldStars.csproj
@@ -107,5 +107,9 @@
       <DependentUpon>ViewController.cs</DependentUpon>
     </Compile>
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\star.png" />
+    <BundleResource Include="Resources\adultgoldstars.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
