--- a/AdultGoldStars/AdultGoldStars/AdultGoldStars.csproj
+++ b/AdultGoldStars/AdultGoldStars/AdultGoldStars.csproj
@@ -133,6 +133,14 @@
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\star.png" />
+    <BundleResource Include="Resources\facebook.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <XamarinComponentReference Include="facebookios">
+      <InstallationInProgress>True</InstallationInProgress>
+      <Version>4.24.0.0</Version>
+      <Visible>False</Visible>
+    </XamarinComponentReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets')" />
