--- a/AdultGoldStars/AdultGoldStars/AdultGoldStars.csproj
+++ b/AdultGoldStars/AdultGoldStars/AdultGoldStars.csproj
@@ -147,9 +147,9 @@
     <Compile Include="ViewController.designer.cs">
       <DependentUpon>ViewController.cs</DependentUpon>
     </Compile>
-    <Compile Include="StarPicker_.cs" />
-    <Compile Include="StarPicker_.designer.cs">
-      <DependentUpon>StarPicker_.cs</DependentUpon>
+    <Compile Include="MainMenu.cs" />
+    <Compile Include="MainMenu.designer.cs">
+      <DependentUpon>MainMenu.cs</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
